--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ bitcode = "0.6.3"
 clap = { version = "4.5.15", features = ["derive"] }
 console-subscriber = "0.4.0"
 crossterm = { version = "0.28.1", features = ["event-stream"] }
+dashmap = "6.0.1"
 eyre = "0.6.12"
 hostname = "0.4.0"
+rand = "0.8.5"
 ratatui = "0.28.0"
 sha2 = "0.10.8"
 socket2 = "0.5.7"
