--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ console-subscriber = "0.4.0"
 crossterm = { version = "0.28.1", features = ["event-stream"] }
 dashmap = "6.0.1"
 eyre = "0.6.12"
+hex = "0.4.3"
 hostname = "0.4.0"
 rand = "0.8.5"
 ratatui = "0.28.0"
